Bug 1691138 - Add border on settings pages for high contrast. r=aleca  a=wsmwk
Differential Revision: https://phabricator.services.mozilla.com/D190731

--- a/mail/themes/shared/mail/common.css
+++ b/mail/themes/shared/mail/common.css
@@ -28,6 +28,7 @@
     --in-content-button-background-hover: var(--grey-90-a20);
     --in-content-button-background-active: var(--grey-90-a30);
     --in-content-categories-background: var(--layout-background-2);
+    --in-content-categories-border: var(--in-content-categories-background);
     --in-content-item-selected-unfocused: var(--color-gray-20);
     --in-content-item-hover: color-mix(in srgb, currentColor 12%, transparent);
     --in-content-item-selected: color-mix(in srgb, currentColor 20%, transparent);
@@ -57,6 +58,7 @@
     --in-content-box-info-background: transparent;
     --in-content-box-info-border: currentColor;
     --in-content-categories-background: transparent;
+    --in-content-categories-border: currentColor;
   }
 }
 
